human-intervention-logs/org.apache.maven.resolver:maven-resolver-connector-basic:2.0.13/gradle-test/gradle-test-2026-06-06T18-39-18-337909Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: org.apache.maven.resolver:maven-resolver-connector-basic:2.0.13
Command: `/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6380-9db69258/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 1 busy and 1 incompatible and 1 stopped Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :tck-test-support:compileJava UP-TO-DATE
> Task :processResources NO-SOURCE
> Task :tck-test-support:processResources NO-SOURCE
> Task :tck-test-support:classes UP-TO-DATE
> Task :classes UP-TO-DATE
> Task :tck-test-support:jar UP-TO-DATE
> Task :jar UP-TO-DATE

/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6380-9db69258/tests/src/org.apache.maven.resolver/maven-resolver-connector-basic/2.0.13/src/test/java/org_apache_maven_resolver/maven_resolver_connector_basic/Maven_resolver_connector_basicTest.java:611: error: NioPathProcessor is not abstract and does not override abstract method newTempFile(Path) in PathProcessor
> Task :compileTestJava FAILED
    private static final class NioPathProcessor implements PathProcessor {
                         ^
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6380-9db69258/tests/src/org.apache.maven.resolver/maven-resolver-connector-basic/2.0.13/src/test/java/org_apache_maven_resolver/maven_resolver_connector_basic/Maven_resolver_connector_basicTest.java:613: error: setLastModified(Path,long) in NioPathProcessor cannot implement setLastModified(Path,long) in PathProcessor
        public void setLastModified(Path path, long value) throws IOException {
                    ^
  return type void is not compatible with boolean
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6380-9db69258/tests/src/org.apache.maven.resolver/maven-resolver-connector-basic/2.0.13/src/test/java/org_apache_maven_resolver/maven_resolver_connector_basic/Maven_resolver_connector_basicTest.java:612: error: method does not override or implement a method from a supertype
        @Override
        ^
Note: /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6380-9db69258/tests/src/org.apache.maven.resolver/maven-resolver-connector-basic/2.0.13/src/test/java/org_apache_maven_resolver/maven_resolver_connector_basic/Maven_resolver_connector_basicTest.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
3 errors

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6380-9db69258/tests/src/org.apache.maven.resolver/maven-resolver-connector-basic/2.0.13/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  Note: /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6380-9db69258/tests/src/org.apache.maven.resolver/maven-resolver-connector-basic/2.0.13/src/test/java/org_apache_maven_resolver/maven_resolver_connector_basic/Maven_resolver_connector_basicTest.java uses or overrides a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6380-9db69258/tests/src/org.apache.maven.resolver/maven-resolver-connector-basic/2.0.13/src/test/java/org_apache_maven_resolver/maven_resolver_connector_basic/Maven_resolver_connector_basicTest.java:613: error: setLastModified(Path,long) in NioPathProcessor cannot implement setLastModified(Path,long) in PathProcessor
          public void setLastModified(Path path, long value) throws IOException {
                      ^
    return type void is not compatible with boolean
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6380-9db69258/tests/src/org.apache.maven.resolver/maven-resolver-connector-basic/2.0.13/src/test/java/org_apache_maven_resolver/maven_resolver_connector_basic/Maven_resolver_connector_basicTest.java:611: error: NioPathProcessor is not abstract and does not override abstract method newTempFile(Path) in PathProcessor
      private static final class NioPathProcessor implements PathProcessor {
                           ^
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6380-9db69258/tests/src/org.apache.maven.resolver/maven-resolver-connector-basic/2.0.13/src/test/java/org_apache_maven_resolver/maven_resolver_connector_basic/Maven_resolver_connector_basicTest.java:612: error: method does not override or implement a method from a supertype
          @Override
          ^
  3 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

BUILD FAILED in 3s

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.
12 actionable tasks: 1 executed, 11 up-to-date

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6380-9db69258/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for org.apache.maven.resolver:maven-resolver-connector-basic:2.0.13 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 4s
9 actionable tasks: 1 executed, 8 up-to-date
